--- a/Blackeye/res/layout/activity_feed.xml
+++ b/Blackeye/res/layout/activity_feed.xml
@@ -1,10 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 
+
 <TabHost xmlns:android="http://schemas.android.com/apk/res/android"
          android:layout_width="fill_parent"
          android:layout_height="fill_parent"
           android:id="@android:id/tabhost">
-        
+        <TextView
+    android:id="@+id/loading"
+    android:layout_width="fill_parent"
+	android:layout_height="fill_parent">Loading</TextView>
         <LinearLayout
                 android:id="@+id/LinearLayout01"
                 android:orientation="vertical"
