--- a/Blackeye/res/layout/activity_player.xml
+++ b/Blackeye/res/layout/activity_player.xml
@@ -21,5 +21,46 @@
         android:layout_marginBottom="17dp"
         android:text="Play" />
 
+    <TextView
+        android:id="@+id/text_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginLeft="24dp"
+        android:layout_marginTop="18dp"
+        android:text="@string/cast_title" />
+
+    <TextView
+        android:id="@+id/text_author"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/text_title"
+        android:layout_below="@+id/text_title"
+        android:text="@string/cast_author" />
+
+    <TextView
+        android:id="@+id/text_duration"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/text_author"
+        android:layout_below="@+id/text_author"
+        android:text="@string/cast_duration" />
+
+    <TextView
+        android:id="@+id/text_pubdate"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/text_duration"
+        android:layout_below="@+id/text_duration"
+        android:text="@string/cast_pubdate" />
+
+    <TextView
+        android:id="@+id/text_description"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/text_pubdate"
+        android:layout_below="@+id/text_pubdate"
+        android:text="@string/cast_description" />
 
 </RelativeLayout>
