--- a/Blackeye/res/layout/activity_player.xml
+++ b/Blackeye/res/layout/activity_player.xml
@@ -21,5 +21,20 @@
         android:layout_marginBottom="17dp"
         android:text="Play" />
 
+    <Button
+        android:id="@+id/Button2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:text="Play from Beginning" />
+    
+    <Button
+        android:id="@+id/Button3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentTop="true"
+        android:text="Mark as Listened To" />
 
 </RelativeLayout>
